--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.1.1
 
-
+  # Product Specific
+  readmore: ^2.2.0
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
@@ -54,6 +56,7 @@ flutter:
     - assets/images/animations/
     - assets/icons/
     - assets/images/banner/
+    - assets/profilepicture/
     - assets/images/product_veggies/
 
 
