--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: appppppp
-description: "A new Flutter project."
+name: SEA Catering
+description: "A Flutter Catering project."
 
 publish_to: 'none'
 version: 1.0.0+1
