--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
 
 
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -77,6 +78,8 @@ flutter:
     - assets/images/product_herbs/
     - assets/images/product_seeds/
     - assets/images/product_nuts/
+    - assets/images/weight_loss/
+    - assets/images/foodcarousel/
 
 
 
