--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,14 +48,24 @@ dependencies:
 
 
 
-
-
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
+
+flutter_native_splash:
+  image: assets/images/logo_catering.png
+  image_dark: assets/images/logo_catering.png
+  background_image: assets/images/background.png
+  background_image_dark: assets/images/background.png
+
+  android_12:
+    image: assets/images/logo_catering.png
+    image_dark: assets/images/logo_catering.png
+    background_image: assets/images/background.png
+    background_image_dark: assets/images/background.png
+
+  web: false
 
 flutter:
   uses-material-design: true
