--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.6
   cloud_firestore: ^4.14.0
+  google_sign_in: ^6.1.6
 
   #Supabase
   supabase_flutter: ^2.0.0
