--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   connectivity_plus: ^5.0.1
   flutter_native_splash: ^2.4.6
   smooth_page_indicator: ^1.1.0
+  fl_chart: ^0.66.0
+
 
   #Icons
   iconsax: ^0.0.8
